--- a/.github/workflows/uninstall-release.yml
+++ b/.github/workflows/uninstall-release.yml
@@ -26,7 +26,7 @@ jobs:
   argo:
     name: Remove argo application
     needs: credentials
-    runs-on: [self-hosted, linux, deployment]
+    runs-on: [self-hosted, linux, deployment, main]
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:20.04
       credentials:
