--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -31,19 +31,22 @@ runs:
         REPOSITORY=$(aws ecr describe-repositories --region ap-southeast-1 --output text \
         --query 'repositories[].repositoryUri' --repository-name '${{ inputs.repository }}')
         TOKEN=$(aws ecr get-authorization-token --region ap-southeast-1 --output text \
-        --query 'authorizationData[].authorizationToken' | base64 -d | cut -d: -f2)
-        echo "::add-mask::$TOKEN"
-        echo "::set-output name=token::$TOKEN"
-        echo "::set-output name=registry::$(echo $REPOSITORY | sed 's|${{ inputs.repository }}||')"
+        --query 'authorizationData[].authorizationToken')
+
+        mkdir -p ~/.docker
+        cat > ~/.docker/config.json <<EOF
+        {"auths":{"915060398631.dkr.ecr.ap-southeast-1.amazonaws.com":{"auth":"$TOKEN"}}}
+        EOF
+
         echo "::set-output name=repository::$REPOSITORY"
         cp ~/.netrc ./
 
-    - name: Login to ECR
-      uses: docker/login-action@v1
-      with:
-        registry: https://${{ steps.ecr.outputs.registry }}
-        username: AWS
-        password: ${{ steps.ecr.outputs.token }}
+    # - name: Login to ECR
+    #   uses: docker/login-action@v1
+    #   with:
+    #     registry: https://${{ steps.ecr.outputs.registry }}
+    #     username: AWS
+    #     password: ${{ steps.ecr.outputs.token }}
     
     - name: Set docker metadata
       id: meta
@@ -57,11 +60,15 @@ runs:
           type=ref,event=branch
 
     - name: Build & push docker images
-      uses: docker/build-push-action@v2
+      # uses: docker/build-push-action@v2
+      # with:
+      #   context: .
+      #   push: true
+      #   platforms: ${{ inputs.platforms }}
+      #   build-args: ${{ inputs.build_args }}
+      #   tags: ${{ steps.meta.outputs.tags }}
+      #   labels: ${{ steps.meta.outputs.labels }}
+      uses: kkp-dfs/dime-github-actions-workflows/kaniko@kaniko
       with:
-        context: .
-        push: true
-        platforms: ${{ inputs.platforms }}
-        build-args: ${{ inputs.build_args }}
-        tags: ${{ steps.meta.outputs.tags }}
+        image: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
