--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -49,7 +49,7 @@ runs:
           type=ref,event=branch
 
     - name: Build & push docker images
-      uses: kkp-dfs/dime-github-actions-workflows/kaniko@kaniko
+      uses: kkp-dfs/dime-github-actions-workflows/kaniko@main
       with:
         image: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
