--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -65,11 +65,11 @@ on:
         description: Name of application
         required: true
         type: string
-      # platforms:
-      #   description: List of target platforms for build
-      #   required: false
-      #   type: string
-      #   default: linux/amd64
+      platforms:
+        description: List of target platforms for build
+        required: false
+        type: string
+        default: linux/amd64
       build_args:
         description: List of build-time variables
         required: false
