--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -373,6 +373,7 @@ jobs:
       - integration-test
       - lint
     runs-on: [self-hosted, linux, deployment, main]
+    if: ${{ always() }}
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:20.04
       credentials:
@@ -426,6 +427,7 @@ jobs:
       - setup
       - build
     runs-on: [self-hosted, linux, deployment, main]
+    if: ${{ always() }}
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:20.04
       credentials:
