--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -11,6 +11,15 @@ inputs:
   build_args:
     description: List of build-time variables
     required: false
+  base_ref:
+    description: The branch or tag ref or commit SHA that be base code.
+    required: true
+  target_ref:
+    description: The branch or tag ref or commit SHA that will be merged to base code.
+    required: true
+  gh_access_token:
+    description: GitHub access token
+    required: true
 
 outputs:
   docker_image:
@@ -20,6 +29,14 @@ outputs:
 runs:
   using: composite
   steps:
+    - name: Checkout and merge PR to base branch
+      uses: kkp-dfs/dime-github-actions-workflows/merge-test-pr@main
+      with:
+        repository: ${{ inputs.repository }}
+        base_ref: ${{ inputs.base_ref }}
+        target_ref: ${{ inputs.target_ref }}
+        gh_access_token: ${{ inputs.gh_access_token }}
+
     - name: Get ECR details and copy .netrc file to context directory
       id: ecr
       shell: bash
