add build-args inputs in kaniko action

--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -64,12 +64,10 @@ runs:
           type=ref,event=pr,suffix=-latest
           type=ref,event=branch,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
           type=ref,event=branch
-        labels: |
-          org.opencontainers.image.description=Image of ${{ inputs.repository }}
-          org.opencontainers.image.licenses=Dime Copyright (c) 2022
 
     - name: Build & push docker images
       uses: kkp-dfs/dime-github-actions-workflows/kaniko@main
       with:
         image: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        build_args: ${{ inputs.build_args }}
