--- a/kaniko/action.yml
+++ b/kaniko/action.yml
@@ -5,6 +5,9 @@ inputs:
   image:
     description: docker image
     required: true
+  build-args:
+    description: list of build arguments
+    required: false
   labels:
     description: docker image labels
     required: false
@@ -16,4 +19,5 @@ runs:
   image: Dockerfile
   args:
     - ${{ inputs.image }}
+    - ${{ inputs.build-args }}
     - ${{ inputs.labels }}
