--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -77,7 +77,7 @@ runs:
         curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"configure\":\".*\",\"write\":\".*\",\"read\":\".*\"}" http://${RMQ_HOST}:15672/api/permissions/${RMQ_VHOST}/${RMQ_USER}
 
     - name: Run go integration test
-      if: ${{ inputs.language == "golang" }}
+      if: ${{ inputs.language == 'golang' }}
       shell: bash
       env:
         INTEGRATION_ON_SIT: "true"
@@ -96,7 +96,7 @@ runs:
         make integration-test
 
     - name: Run flutter integration test
-      if: ${{ inputs.language == "flutter" }}
+      if: ${{ inputs.language == 'flutter' }}
       shell: bash
       run: flutter test integration_test
 
