--- a/lang-setup/action.yml
+++ b/lang-setup/action.yml
@@ -21,6 +21,7 @@ inputs:
 runs:
   using: composite
   steps:
+    - uses: kkp-dfs/dime-github-actions-workflows/common@revise-pr
     # Golang setup and download modules
     - name: Setup go version ${{ inputs.go_version }}
       if: ${{ inputs.language == 'golang' }}
