--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -118,6 +118,9 @@ jobs:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
+      - uses: kkp-dfs/dime-github-actions-workflows/common@revise-pr
+        with:
+          gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
       - uses: kkp-dfs/dime-github-actions-workflows/lang-setup@revise-pr
         with:
           repository: ${{ inputs.repository }}
