--- a/common/action.yml
+++ b/common/action.yml
@@ -4,7 +4,7 @@ description: Common action of Dime workflow
 inputs:
   gh_access_token:
     description: GitHub access token
-    required: false
+    required: true
 
 runs:
   using: composite
