change permission of entrypoint.sh file

--- a/common/action.yml
+++ b/common/action.yml
@@ -12,10 +12,9 @@ runs:
     - name: Create .netrc file
       shell: bash
       run: |
-        cat <<EOF > .netrc
+        cat <<EOF > $HOME/.netrc
         machine github.com
           login ${{ inputs.gh_access_token }}
           password x-oauth-basic
         EOF
-        chmod 600 .netrc
-        cp .netrc $HOME/.netrc
+        chmod 600 $HOME/.netrc
