--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -21,7 +21,7 @@ inputs:
   gh_access_token:
     description: GitHub access token
     required: true
-    default: ${{ secrets.GH_ACCESS_TOKEN }}
+    default: ${{ secrets.gh_access_token }}
 
 runs:
   using: composite
