--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -20,8 +20,8 @@ inputs:
     required: true
   gh_access_token:
     description: GitHub access token
-    required: true
-    default: ${{ secrets.GH_ACCESS_TOKEN }}
+    required: false
+    default: ${{ secrets.gh_access_token }}
 
 runs:
   using: composite
