--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -20,8 +20,7 @@ inputs:
     required: true
   gh_access_token:
     description: GitHub access token
-    required: false
-    default: ${{ secrets.gh_access_token }}
+    required: true
 
 runs:
   using: composite
