--- a/lint/action.yml
+++ b/lint/action.yml
@@ -27,6 +27,8 @@ runs:
       with:
         args: -E ${{ inputs.linter }} --timeout 2m0s
         version: latest
+        skip-go-installation: true
+        skip-pkg-cache: true
 
     - name: Node lint
       if: ${{ inputs.language == 'node' }}
