run lint on ubuntu image

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -144,8 +144,15 @@ jobs:
 
   lint:
     name: Run lint
-    runs-on: [self-hosted, linux, main]
     needs: setup
+    runs-on: [self-hosted, linux, main]
+    container:
+      image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:21.04
+      credentials:
+        username: ${{ needs.setup.outputs.ecr_username }}
+        password: ${{ needs.setup.outputs.ecr_password }}
+      volumes:
+        - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
       - uses: kkp-dfs/dime-github-actions-workflows/lang-setup@revise-pr
         with:
